[package]
name = "risc0-zkvm-elf-analyzer"
version = "0.3.1"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
  "Sovereign Labs <info@sovereign.xyz>",
  "eureka-cpu <github.eureka@gmail.com>"
]

[dependencies]
risc0-zkvm = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix", default-features = false }
risc0-zkvm-platform = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix" }
rustc-demangle = "0.1.24"
goblin = "0.9.2"
capstone = "0.12.0"
regex = "1.11.1"
prettytable-rs = "0.10"
textwrap = "0.16.0"
indicatif = "0.17.6"
clap = { version = "4.5.20", features = ["derive"] }
